w00t        2006/08/28 15:31:34 UTC	(20060828-6245)
  Log:
  FJOIN qaohv mode bouncing on TS difference. Untested, ugly code, should work though.

  Changes:	Modified:
  +65 -15	trunk/protocol/inspircd_dev.c (File Modified) 


w00t        2006/08/28 15:03:27 UTC	(20060828-6243)
  Log:
  Implement basic lowerts. Bouncing (per 1.1 spec) to come

  Changes:	Modified:
  +10 -0	trunk/protocol/inspircd_dev.c (File Modified) 


jilles      2006/08/27 14:09:17 UTC	(20060827-6241)
  Log:
  Add non-ENCAP CHGHOST.
  

  Changes:	Modified:
  +15 -2	trunk/protocol/charybdis.c (File Modified) 


w00t        2006/08/27 14:04:35 UTC	(20060827-6239)
  Log:
  Remove * prefix. Why was this here?

  Changes:	Modified:
  +0 -1		trunk/protocol/inspircd_dev.c (File Modified) 


w00t        2006/08/27 14:01:59 UTC	(20060827-6237)
  Log:
  FMODE parser, currently duplicates MODE parser. We may want to do something with the TS, which is why I've seperated the two.

  Changes:	Modified:
  +42 -22	trunk/protocol/inspircd_dev.c (File Modified) 


w00t        2006/08/27 13:13:26 UTC	(20060827-6235)
  Log:
  Seemingly (?) working FJOIN parser, needs cleanup - will do that in next commit most likely. Could probably be more efficient. Suggestions?

  Changes:	Modified:
  +48 -2	trunk/protocol/inspircd_dev.c (File Modified) 


jilles      2006/08/27 12:09:16 UTC	(20060827-6233)
  Log:
  Fix EUID support.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/charybdis.c (File Modified) 


pippijn     2006/08/27 12:08:04 UTC	(20060827-6231)
  Log:
  Fixed XML-RPC. It's \r\n, not \n\r. Clients die over this!
  

  Changes:	Modified:
  +2 -2		trunk/src/xmlrpc.c (File Modified) 


pippijn     2006/08/27 11:51:45 UTC	(20060827-6229)
  Log:
  Fixed XML-RPC returning non-wellformed XML. There was a space before <methodResponse>.
  

  Changes:	Modified:
  +1 -1		trunk/src/xmlrpc.c (File Modified) 


nenolod     2006/08/27 03:32:55 UTC	(20060827-6227)
  Log: